Refactor class ZDTStudy